# product-finder

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  VISION.md  config.example.yaml  pyproject.toml  roadmap.md
.daemoncore/: .env.template  HUMANS.md  README-onboarding.md  boot.md  brand-guidelines.md  domain.md  project-context.md  project-memory.md  repo.config.json
.daemoncore/code-review/: README.md
.daemoncore/cognition/: taxonomy.json
.daemoncore/vendors/: README.md
docs/: architecture-briefing.md  architecture-review.md  connector-architecture.md  documentation-audit.md  knowledge-model.md  platform-charter.md  platform-domain-model.md  platform_ux_design_review.md  strategic-review.md
docs/adr/: 0007-catalogue-globalization.md  (+7 more)
prompts/: 01-initial-cli-.prompt  02-web-ui.prompt
scripts/: export-repo.sh
tests/: test_auction_snapshots.py  test_auction_trajectory.py  test_auction_watch.py  test_catalogue.py  test_catalogue_globalization.py  test_catalogue_tidy.py  test_config.py  test_connector_health.py  test_connectors.py  test_coverage.py  test_coverage_analytics.py  test_db_migrations.py  test_dedup.py  test_duplicates.py  test_extraction.py  test_grading.py  test_html_report.py  test_identity.py  test_locking.py  test_match_corrections.py  test_offers.py  test_orchestrator.py  test_outbound.py  test_price_history.py  test_price_trend.py  test_project_import.py  test_rate_limit.py  test_reassessment.py  test_retailer_price.py  test_scoring.py  test_sources.py  test_spec_match.py  test_suggestions.py  test_web.py  test_web_import.py
(+139 files in other folders)
