[project]
name = "product-finder"
version = "0.1.0"
description = "Track wanted products across second-hand marketplaces, grouped by project, and alert on genuine bargains."
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
product-finder = "product_finder.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
